--- a/custom_components/pmg/manifest.json
+++ b/custom_components/pmg/manifest.json
@@ -2,10 +2,10 @@
   "domain": "pmg",
   "name": "Proxmox Mail Gateway",
   "config_flow": true,
-  "documentation": "https://www.proxmox.com/en/proxmox-mail-gateway",
-  "issue_tracker": "https://github.com/home-assistant/core/issues",
+  "documentation": "https://github.com/hannes0217/pmg",
+  "issue_tracker": "https://github.com/hannes0217/pmg/issues",
   "requirements": [],
-  "codeowners": [],
+  "codeowners": ["@hannes0217"],
   "iot_class": "local_polling",
-  "version": "0.1.0"
+  "version": "1.0.0"
 }
